<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
android:orientation="vertical"
android:background="@drawable/rain">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/awe_the_coffee_place"
    android:textStyle="bold"
    android:textSize="30sp"
    android:textAlignment="center"
    android:layout_marginBottom="30dp"
    android:textColor="#000066"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/quantity"
    android:textColor="#000020"
    android:textSize="20sp"
    />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    >


    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/decreament"
        android:text="@string/minus"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#000099"
        />

    <TextView
        android:id="@+id/quantityview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_0"
        android:textColor="#000011"
        android:textSize="16sp"
        />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/increament"
        android:text = "@string/plus"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        android:textColor="#ffffff"
        android:background="#000099"
        />




</LinearLayout>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/amount"
    android:textSize="20sp"
    android:textColor="#000022"
    />

<TextView
    android:id="@+id/price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dollar"
    android:layout_marginBottom="16dp"
    android:textSize="16sp"
    android:textColor="#000099"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/order"
    android:text="@string/order"
    android:layout_marginBottom="45dp"
    android:textColor="#ffffff"
    android:background="#000099"
    />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo"
    android:layout_marginBottom="10dp"
    android:contentDescription="@string/todo" />
</LinearLayout>






