<?xml version="1.0" encoding="utf-8"?>
   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signup">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/first"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:drawableStart="@drawable/usernameviolet"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText3"
            android:drawableStart="@drawable/face"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lockviolet"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/lockviolet"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editText4"
            android:layout_marginTop="50dp"
            android:background="#20ffffff"
            android:ems="5"
            android:text="@string/signup"/>


    </RelativeLayout>
</ScrollView>