<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rain"
    android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

       <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/welcome"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:drawableStart="@drawable/ic_person_blue"
            android:drawablePadding="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:hint="@string/user_name"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="6dp"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_signed_in"
            android:textStyle="italic"
            android:layout_below="@id/password"
            android:layout_alignStart="@id/password"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:ems="5"
            android:background="#20ffffff"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="104dp"
            android:layout_height="73dp"
            android:layout_alignStart="@id/password"
            android:layout_below="@id/loginButton"
            android:layout_marginStart="30dp"
            android:textColor="#ffffff"
            android:text="@string/not_a_member" />

        <Button
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text"
            android:layout_alignEnd="@id/password"
            android:layout_toEndOf="@+id/text"
            android:background="#00ffffff"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:text="@string/sign_up" />

    </RelativeLayout>
</RelativeLayout>