<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plainbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contacts"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="#000099"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:scaleType="centerCrop"
                android:src="@drawable/augustina"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/augustina"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_91_7287070196"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/augustina"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/david"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deepak"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work_91_7780689988"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/deepak"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/lahari"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lahari"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_91_9444924727"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/lahari"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/riya"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riya"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_91_7893116995"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/riya"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/william"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/william"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work_91_9515464004"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/william"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>