<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/shape_of_you"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="26dp"
            android:background="#009933"
            app:srcCompat="@drawable/ic_play_circle"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignTop="@+id/play"
            android:background="#ff3333"
            app:srcCompat="@drawable/ic_pause_circle"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="102dp"
            android:text="@string/faded_alenwalker"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/play2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/play"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="28dp"
            android:background="#009933"
            app:srcCompat="@drawable/ic_play_circle"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/play"
            android:layout_marginEnd="153dp"
            android:background="#80ffff"
            app:srcCompat="@drawable/ic_action_name"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/pause2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/pause"
            android:layout_alignTop="@+id/play2"
            android:background="#ff3333"
            app:srcCompat="@drawable/ic_pause_circle"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />


        <ImageButton
            android:id="@+id/stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/play2"
            android:layout_centerHorizontal="true"
            android:background="#80ffff"
            app:srcCompat="@drawable/ic_action_name"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</ScrollView>